--- a/webroot/css/style.default.css
+++ b/webroot/css/style.default.css
@@ -3082,20 +3082,13 @@ a.text-dark:focus, a.text-dark:hover {
   color: #868e96;
   background-color: #fff;
   border: 1px solid #ced4da;
-  border-radius: 0;
-  -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
+  border-radius: 10px;
 }
 
 .form-control:focus {
   color: #868e96;
   background-color: #fff;
-  border-color: #e52a6f;
   outline: none;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(255, 116, 115, 0.25);
-  box-shadow: 0 0 0 0.2rem rgba(255, 116, 115, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -3420,3 +3413,215 @@ border-left: solid 5px #675682;
     transition: all .1s ease-in;
 border-left: solid 5px #5F0F4E;
 }
+
+.box_title {
+  width:100%;
+  height:100%;
+  background:#FFF;
+  margin:40px auto;
+}
+
+.effect6
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(103,174,202), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(103,174,202), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(103,174,202), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effect6:before, .effect6:after
+{
+  content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(103,174,202);
+    -moz-box-shadow:0 0 20px rgba(103,174,202);
+    box-shadow:0 0 20px rgba(103,174,202);
+    top:50%;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect6:after
+{
+  right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
+
+
+.effect7
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(95, 15, 78, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(95, 15, 78, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(95, 15, 78, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effect7:before, .effect7:after
+{
+  content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(95, 15, 78, 1);
+    -moz-box-shadow:0 0 20px rgba(95, 15, 78, 1);
+    box-shadow:0 0 20px rgba(95, 15, 78, 1);
+    top:50%;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect7:after
+{
+  right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
+
+
+.effect8
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(103, 86, 130, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(103, 86, 130, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(103, 86, 130, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effect8:before, .effect8:after
+{
+  content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(103, 86, 130, 1);
+    -moz-box-shadow:0 0 20px rgba(103, 86, 130, 1);
+    box-shadow:0 0 20px rgba(103, 86, 130, 1);
+    top:50%;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect8:after
+{
+  right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
+
+.effect9
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(229, 42, 111, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(229, 42, 111, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(229, 42, 111, 1), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effect9:before, .effect9:after
+{
+  content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(229, 42, 111, 1);
+    -moz-box-shadow:0 0 20px rgba(229, 42, 111, 1);
+    box-shadow:0 0 20px rgba(229, 42, 111, 1);
+    top:50%;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect9:after
+{
+  right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
+
+
+.capitalfont {
+  text-transform: uppercase;
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  letter-spacing: 0.2em;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: black;
+}
+
+.thinfont {
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  font-size: 0.875rem;
+  letter-spacing: 0.1em;
+  padding: 0.75rem 0.45rem;
+  font-weight: 100;
+  color: black;
+}
+
+.offer {
+  text-transform: uppercase;
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  letter-spacing: 0.2em;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: black;
+}
+
+.bootstrap-select .dropdown-menu li a span.text {
+  display: inline-block;
+  text-transform: uppercase;
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
+  letter-spacing: 0.1em;
+  font-size: 0.775rem;
+  color: black;
+}
+
+.noborder {
+  border: none;
+  -webkit-box-shadow: 0 0 0 0.0rem rgba(255, 116, 115, 0.25);
+  box-shadow: 0 0 0 0.0rem rgba(255, 116, 115, 0.25);
+}
+
+.bootstrap-select .dropdown-menu li a:hover {
+-moz-transition: all .1s ease-in;
+-o-transition: all .1s ease-in;
+-webkit-transition: all .1s ease-in;
+transition: all .1s ease-in;
+background-color: #67AECA;
+}
+
+.bootstrap-select .dropdown-menu li.disabled a {
+  display: none;
+}
+
+.bootstrap-select:hover {
+  -moz-transition: all .1s ease-in;
+-o-transition: all .1s ease-in;
+-webkit-transition: all .1s ease-in;
+transition: all .1s ease-in;
+background-color: #67AECA;
+}
+
+
