--- a/webroot/css/style.default.css
+++ b/webroot/css/style.default.css
@@ -3624,4 +3624,11 @@ transition: all .1s ease-in;
 background-color: #67AECA;
 }
 
-
+.largebtn {
+  width: 250px;
+  height: 50px;
+    margin: 0 auto;
+    padding: 0;
+    display: table-cell;
+    vertical-align: middle;
+}
