--- a/webroot/css/style.default.css
+++ b/webroot/css/style.default.css
@@ -3723,3 +3723,15 @@ background-color: #67AECA;
   width:50%;
   height: 50%;
 }
+
+.rowclose {
+  margin-bottom:-35px !important;"
+}
+
+.labelclose {
+  margin-bottom:-30px !important;"
+}
+
+.titleclose {
+  margin-bottom:-5px !important;"
+}
