table filters fix, advanced search add

--- a/webroot/css/style.default.css
+++ b/webroot/css/style.default.css
@@ -2671,7 +2671,7 @@ h4,
 .box-image .name h3,
 .box-image-text .top .name h3,
 .box-image-text .top .name h4 {
-  font-size: 1.0675rem;
+  font-size: .975rem;
 }
 
 h5,
