font size mobile fix 2

--- a/webroot/css/style.default.css
+++ b/webroot/css/style.default.css
@@ -3756,6 +3756,38 @@ background-color: #67AECA;
 
 @media (max-width: 992px) {
     html {
-    font-size: 85% !important;
+    font-size: 90% !important;
   }
 }
+
+@media (max-width:1100px) {
+    html {
+    font-size: 200% !important;
+  }
+}
+
+
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */    
+  html {
+    font-size: 85% !important;
+  } }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */    
+  html {
+    font-size: 85% !important;
+  } }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */     
+  html {
+    font-size: 85% !important;
+  }}
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
+  html {
+    font-size: 85% !important;
+  }}
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */     
+  html {
+    font-size: 90% !important;
+  }}
+@media (min-width:1281px) { /* hi-res laptops and desktops */
+  html {
+    font-size: 100% !important;
+  }}
